Pipeline/javax_management_openmbean/javax_management_openmbeanOutputResult.txt
Sample: SimpleType_7
----------------------------------------------------------------
stdout:
true

================================================================

Sample: TabularDataSupport_5
----------------------------------------------------------------
output:
./javax_management_openmbean/javaFiles/TabularDataSupport_5.java:6: error: no suitable constructor found for TabularDataSupport(no arguments)
        TabularDataSupport tabularDataSupport = new TabularDataSupport();
                                                ^
    constructor TabularDataSupport.TabularDataSupport(TabularType) is not applicable
      (actual and formal argument lists differ in length)
    constructor TabularDataSupport.TabularDataSupport(TabularType,int,float) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

